syntax = "proto3";

package auth;

import "user.proto";
import "signup.proto";
import "signin.proto";

service AuthService {
  rpc SignUpUser(SignUpUserInput) returns (SignUpUserResponse) {}
  rpc SignInUser(SignInUserInput) returns (SignInUserResponse) {}
}